sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  var longueur = getNombreValeurs()
  var ecart = longueur
  var i = 0
  var j = 0
  var compteur = 1
  var valeur = 0
  while (ecart > 0) {
    ecart = (ecart.toDouble / 2).toInt
    j = i
    compteur = 1
    valeur = getValeur(j)
    while(j - compteur*ecart > ecart && getValeur(j-((compteur+1)*ecart) > valeur) {
      copie(j-((compteur+1)*ecart),j-(compteur*ecart))
      j -= ecart
    }
    setValeur(j,valeur)
  }
}




def insertionSort() {
  var valeur = 0
  val longueur = getNombreValeurs()
  var j = 0
  for (i <- 1 to longueur - 1 ) {
    valeur = getValeur(i)
    j = i
    while (j != 0 && getValeur(j-1)>valeur) {
      copie(j-1,j)
      j -= 1
    }
    setValeur(j,valeur)
  }
}